Fix horizontal scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,6 @@ body {
     display: grid;
     grid-template-columns: 20% auto;
     height: 100vh;
-    width: 100vw;
 }
 .header {
     background-color: #356258;
